Add swagger in PlayerController
